--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -139,7 +139,7 @@
 </p>
 <h3><span id="Zastaral.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Zastaral&eacute;_n&aacute;stroje">Zastaral&eacute; n&aacute;stroje</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Plane.svg&amp;filetimestamp=20170324054826&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Plane.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Plane.html" title="PartDesign Plane">Vytvo&#345;it referen&#269;n&iacute; rovinu</a>: vytvo&#345;&iacute; referen&#269;n&iacute; rovinu v aktivn&iacute;m t&#283;lesu. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Line.svg&amp;filetimestamp=20170324054744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Line.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Line.html" title="PartDesign Line">Create a datum line</a>: creates a datum line in the active body. This tool is not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Line.svg&amp;filetimestamp=20170324054744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Line.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Line.html" title="PartDesign Line">Vytvo&#345;it referen&#269;n&iacute; linii</a>: vytvo&#345;&iacute; referen&#269;n&iacute; linii v aktivn&iacute;m t&#283;le. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Point.svg&amp;filetimestamp=20240405093024&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Point.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Point.html" title="PartDesign Point">Create a datum point</a>: creates a datum point in the active body. This tool is not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_CoordinateSystem.svg&amp;filetimestamp=20170324054625&amp;.html" class="mw-file-description"><img src="../File/PartDesign_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_CoordinateSystem.html" title="PartDesign CoordinateSystem">Create a local coordinate system</a>: creates a local coordinate system attached to datum geometry in the active body. This tool is not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Migrate.svg&amp;filetimestamp=20240405093045&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Migrate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Migrate.html" title="PartDesign Migrate">Migrate</a>: migrates files from FreeCAD versions below 0.17 to version 0.17. This tool is not available in <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
@@ -201,12 +201,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119215610
+Cached time: 20260119215639
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.192 seconds
-Real time usage: 0.295 seconds
+CPU time usage: 0.223 seconds
+Real time usage: 0.408 seconds
 Preprocessor visited node count: 471/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -217,18 +217,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.261      1 -total
- 30.24%    4.918      1 Template:Userdocnavi/cs
- 26.39%    4.292      1 Template:PartDesign_Tools_navi/cs
- 19.28%    3.135      2 Template:Navigation_menu_2
- 11.78%    1.915      2 Template:Docnav
-  6.98%    1.136      5 Template:VersionPlus
-  6.75%    1.098      1 Template:Version
-  6.67%    1.084      1 Template:MenuCommand
-  6.28%    1.021      1 Template:TOCright
+100.00%   38.640      1 -total
+ 32.24%   12.459      1 Template:Userdocnavi/cs
+ 24.89%    9.616      1 Template:PartDesign_Tools_navi/cs
+ 21.06%    8.138      2 Template:Docnav
+ 20.51%    7.926      2 Template:Navigation_menu_2
+  6.76%    2.611      1 Template:TOCright
+  4.25%    1.642      5 Template:VersionPlus
+  3.66%    1.413      1 Template:Version
+  3.36%    1.300      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215609 and revision id 1741353. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215639 and revision id 1741355. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
