--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -141,7 +141,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Plane.svg&amp;filetimestamp=20170324054826&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Plane.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Plane.html" title="PartDesign Plane">Vytvo&#345;it referen&#269;n&iacute; rovinu</a>: vytvo&#345;&iacute; referen&#269;n&iacute; rovinu v aktivn&iacute;m t&#283;lesu. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Line.svg&amp;filetimestamp=20170324054744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Line.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Line.html" title="PartDesign Line">Vytvo&#345;it referen&#269;n&iacute; linii</a>: vytvo&#345;&iacute; referen&#269;n&iacute; linii v aktivn&iacute;m t&#283;le. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Point.svg&amp;filetimestamp=20240405093024&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Point.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Point.html" title="PartDesign Point">Vytvo&#345;it referen&#269;n&iacute; bod</a>: vytvo&#345;&iacute; referen&#269;n&iacute; bod v aktivn&iacute;m t&#283;le. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_CoordinateSystem.svg&amp;filetimestamp=20170324054625&amp;.html" class="mw-file-description"><img src="../File/PartDesign_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_CoordinateSystem.html" title="PartDesign CoordinateSystem">Create a local coordinate system</a>: creates a local coordinate system attached to datum geometry in the active body. This tool is not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_CoordinateSystem.svg&amp;filetimestamp=20170324054625&amp;.html" class="mw-file-description"><img src="../File/PartDesign_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_CoordinateSystem.html" title="PartDesign CoordinateSystem">Vytvo&#345;it lok&aacute;ln&iacute; sou&#345;adnicov&yacute; syst&eacute;m</a>: vytvo&#345;&iacute; lok&aacute;ln&iacute; sou&#345;adnicov&yacute; syst&eacute;m p&#345;ipojen&yacute; k geometrii sou&#345;adnicov&eacute;ho syst&eacute;mu v aktivn&iacute;m t&#283;lese. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Migrate.svg&amp;filetimestamp=20240405093045&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Migrate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Migrate.html" title="PartDesign Migrate">Migrate</a>: migrates files from FreeCAD versions below 0.17 to version 0.17. This tool is not available in <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 <h2><span class="mw-headline" id="Preferences">Preferences</span></h2>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Preferences-part_design.svg&amp;filetimestamp=20251116144535&amp;.html" class="mw-file-description"><img src="../File/Preferences-part_design.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Preferences.html" title="PartDesign Preferences">Preferences</a>: preferences for the PartDesign Workbench.</li>
@@ -201,12 +201,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119215720
+Cached time: 20260119215755
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.218 seconds
-Real time usage: 0.588 seconds
+CPU time usage: 0.225 seconds
+Real time usage: 0.346 seconds
 Preprocessor visited node count: 471/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -217,18 +217,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.811      1 -total
- 43.87%   24.043      1 Template:PartDesign_Tools_navi/cs
- 24.93%   13.666      1 Template:Userdocnavi/cs
- 23.94%   13.120      2 Template:Navigation_menu_2
-  8.87%    4.864      1 Template:TOCright
-  6.43%    3.522      2 Template:Docnav
-  4.84%    2.653      5 Template:VersionPlus
-  4.77%    2.612      1 Template:Version
-  4.71%    2.580      1 Template:MenuCommand
+100.00%   23.974      1 -total
+ 33.14%    7.945      1 Template:Userdocnavi/cs
+ 24.62%    5.902      1 Template:PartDesign_Tools_navi/cs
+ 17.24%    4.132      2 Template:Navigation_menu_2
+ 12.15%    2.913      2 Template:Docnav
+  7.38%    1.768      1 Template:MenuCommand
+  7.05%    1.689      1 Template:Version
+  7.02%    1.683      1 Template:TOCright
+  4.54%    1.089      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215719 and revision id 1741357. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215754 and revision id 1741359. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
