--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -142,7 +142,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Line.svg&amp;filetimestamp=20170324054744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Line.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Line.html" title="PartDesign Line">Vytvo&#345;it referen&#269;n&iacute; linii</a>: vytvo&#345;&iacute; referen&#269;n&iacute; linii v aktivn&iacute;m t&#283;le. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Point.svg&amp;filetimestamp=20240405093024&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Point.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Point.html" title="PartDesign Point">Vytvo&#345;it referen&#269;n&iacute; bod</a>: vytvo&#345;&iacute; referen&#269;n&iacute; bod v aktivn&iacute;m t&#283;le. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_CoordinateSystem.svg&amp;filetimestamp=20170324054625&amp;.html" class="mw-file-description"><img src="../File/PartDesign_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_CoordinateSystem.html" title="PartDesign CoordinateSystem">Vytvo&#345;it lok&aacute;ln&iacute; sou&#345;adnicov&yacute; syst&eacute;m</a>: vytvo&#345;&iacute; lok&aacute;ln&iacute; sou&#345;adnicov&yacute; syst&eacute;m p&#345;ipojen&yacute; k geometrii sou&#345;adnicov&eacute;ho syst&eacute;mu v aktivn&iacute;m t&#283;lese. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Migrate.svg&amp;filetimestamp=20240405093045&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Migrate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Migrate.html" title="PartDesign Migrate">Migrate</a>: migrates files from FreeCAD versions below 0.17 to version 0.17. This tool is not available in <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Migrate.svg&amp;filetimestamp=20240405093045&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Migrate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Migrate.html" title="PartDesign Migrate">P&#345;enesen&iacute;</a>: p&#345;enese soubory z verz&iacute; FreeCADu ni&#382;&scaron;&iacute;ch ne&#382; 0.17 do verze 0.17. Tento n&aacute;stroj nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 <h2><span class="mw-headline" id="Preferences">Preferences</span></h2>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Preferences-part_design.svg&amp;filetimestamp=20251116144535&amp;.html" class="mw-file-description"><img src="../File/Preferences-part_design.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Preferences.html" title="PartDesign Preferences">Preferences</a>: preferences for the PartDesign Workbench.</li>
 <li><a href="../Fine-tuning.html#PartDesign_Workbench" title="Fine-tuning">Fine tuning</a>: some extra parameters to fine-tune PartDesign behavior.</li></ul>
@@ -201,12 +201,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119215755
+Cached time: 20260119215855
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.225 seconds
-Real time usage: 0.346 seconds
+CPU time usage: 0.266 seconds
+Real time usage: 0.990 seconds
 Preprocessor visited node count: 471/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -217,18 +217,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.974      1 -total
- 33.14%    7.945      1 Template:Userdocnavi/cs
- 24.62%    5.902      1 Template:PartDesign_Tools_navi/cs
- 17.24%    4.132      2 Template:Navigation_menu_2
- 12.15%    2.913      2 Template:Docnav
-  7.38%    1.768      1 Template:MenuCommand
-  7.05%    1.689      1 Template:Version
-  7.02%    1.683      1 Template:TOCright
-  4.54%    1.089      5 Template:VersionPlus
+100.00%   56.539      1 -total
+ 54.17%   30.629      1 Template:PartDesign_Tools_navi/cs
+ 29.52%   16.690      2 Template:Navigation_menu_2
+ 25.31%   14.311      1 Template:Userdocnavi/cs
+  5.63%    3.182      2 Template:Docnav
+  3.69%    2.089      1 Template:Version
+  3.39%    1.916      1 Template:MenuCommand
+  2.98%    1.687      5 Template:VersionPlus
+  2.64%    1.493      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215754 and revision id 1741359. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215853 and revision id 1741361. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
