--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -148,7 +148,9 @@
 <h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Preferences-part_design.svg&amp;filetimestamp=20251116144535&amp;.html" class="mw-file-description"><img src="../File/Preferences-part_design.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Preferences.html" title="PartDesign Preferences">P&#345;edvolby</a>: p&#345;edvolby pro pracovn&iacute; prost&#345;ed&iacute; PartDesign.</li>
 <li><a href="../Fine-tuning.html#PartDesign_Workbench" title="Fine-tuning">Jemn&eacute; dolad&#283;n&iacute;</a>: n&#283;kter&eacute; dal&scaron;&iacute; parametry pro jemn&eacute; dolad&#283;n&iacute; chov&aacute;n&iacute; n&aacute;stroje PartDesign.</li></ul>
-<h2><span class="mw-headline" id="Tutorials">Tutorials</span></h2>
+<p><span id="Tutorials"></span>
+</p>
+<h2><span id="N.C3.A1vody"></span><span class="mw-headline" id="N&aacute;vody">N&aacute;vody</span></h2>
 <ul><li><a rel="nofollow" class="external text" href="http://help-freecad-jpg87.fr/">How to use FreeCAD</a>, a website describing the workflow for mechanical design.</li>
 <li><a href="../Creating_a_simple_part_with_PartDesign.html" title="Creating a simple part with PartDesign">Creating a simple part with PartDesign</a></li>
 <li><a href="../Basic_Part_Design_Tutorial_019.html" title="Basic Part Design Tutorial 019">Basic Part Design Tutorial 019</a></li>
@@ -203,13 +205,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119220135
+Cached time: 20260119220149
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.244 seconds
-Real time usage: 0.695 seconds
-Preprocessor visited node count: 472/1000000
+CPU time usage: 0.213 seconds
+Real time usage: 0.312 seconds
+Preprocessor visited node count: 473/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -219,18 +221,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.744      1 -total
- 29.71%   14.184      1 Template:Userdocnavi/cs
- 27.01%   12.895      1 Template:Version
- 14.84%    7.083      1 Template:PartDesign_Tools_navi/cs
- 14.27%    6.813      2 Template:Navigation_menu_2
-  9.61%    4.589      1 Template:MenuCommand
-  6.16%    2.941      2 Template:Docnav
-  5.31%    2.535      1 Template:TOCright
-  4.97%    2.371      5 Template:VersionPlus
+100.00%   19.045      1 -total
+ 27.81%    5.297      1 Template:Userdocnavi/cs
+ 27.34%    5.206      1 Template:PartDesign_Tools_navi/cs
+ 16.79%    3.198      2 Template:Navigation_menu_2
+ 12.56%    2.392      2 Template:Docnav
+  9.08%    1.729      1 Template:Version
+  7.62%    1.451      5 Template:VersionPlus
+  6.91%    1.316      1 Template:TOCright
+  4.44%    0.845      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220134 and revision id 1741365. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220149 and revision id 1741367. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
