--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -156,7 +156,9 @@
 <li><a href="../Basic_Part_Design_Tutorial_019.html" title="Basic Part Design Tutorial 019">Z&aacute;kladn&iacute; n&aacute;vrh d&iacute;l&#367; &ndash; v&yacute;ukov&yacute; program 019</a></li>
 <li><a href="../PartDesign_Bearingholder_Tutorial_I.html" title="PartDesign Bearingholder Tutorial I">N&aacute;vod k pou&#382;it&iacute; dr&#382;&aacute;ku lo&#382;iska I</a> (vy&#382;aduje aktualizaci)</li>
 <li><a href="../PartDesign_Bearingholder_Tutorial_II.html" title="PartDesign Bearingholder Tutorial II">N&aacute;vod na v&yacute;robu dr&#382;&aacute;ku lo&#382;iska II</a> (vy&#382;aduje aktualizaci)</li></ul>
-<h2><span class="mw-headline" id="Examples">Examples</span></h2>
+<p><span id="Examples"></span>
+</p>
+<h2><span id="P.C5.99.C3.ADklady"></span><span class="mw-headline" id="P&#345;&iacute;klady">P&#345;&iacute;klady</span></h2>
 <p>For some ideas of what can be achieved with Part Design tools, have a look at: <a href="../PartDesign_Examples.html" title="PartDesign Examples">PartDesign examples</a>.
 </p><p><span typeof="mw:File"><span><img src="../File/PartDesign_ExampleSphere-02.png" decoding="async" width="80" height="60" class="mw-file-element" data-file-width="800" data-file-height="600"></span></span>
 <span typeof="mw:File"><span><img src="../File/PartDesign_ExampleTorus-01.png" decoding="async" width="80" height="60" class="mw-file-element" data-file-width="800" data-file-height="600"></span></span>
@@ -205,13 +207,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119220636
+Cached time: 20260119220643
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.230 seconds
-Real time usage: 0.395 seconds
-Preprocessor visited node count: 473/1000000
+CPU time usage: 0.238 seconds
+Real time usage: 0.855 seconds
+Preprocessor visited node count: 474/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -221,18 +223,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.208      1 -total
- 29.78%    6.912      1 Template:Userdocnavi/cs
- 25.13%    5.831      1 Template:PartDesign_Tools_navi/cs
- 16.14%    3.746      2 Template:Navigation_menu_2
-  9.21%    2.138      2 Template:Docnav
-  8.48%    1.969      1 Template:Version
-  8.26%    1.916      1 Template:MenuCommand
-  8.02%    1.861      1 Template:TOCright
-  6.77%    1.571      5 Template:VersionPlus
+100.00%   22.542      1 -total
+ 32.08%    7.232      1 Template:PartDesign_Tools_navi/cs
+ 31.33%    7.063      1 Template:Userdocnavi/cs
+ 19.27%    4.344      2 Template:Navigation_menu_2
+ 11.94%    2.691      2 Template:Docnav
+  5.97%    1.345      1 Template:Version
+  5.85%    1.319      1 Template:TOCright
+  4.77%    1.076      5 Template:VersionPlus
+  4.17%    0.939      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220635 and revision id 1741369. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220642 and revision id 1741371. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
