--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -13,7 +13,7 @@
 <li><a href="../ro/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench/Atelierul de PartDesign (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../fi/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench/bg (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; PartDesign (63% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -159,7 +159,7 @@
 <p><span id="Examples"></span>
 </p>
 <h2><span id="P.C5.99.C3.ADklady"></span><span class="mw-headline" id="P&#345;&iacute;klady">P&#345;&iacute;klady</span></h2>
-<p>For some ideas of what can be achieved with Part Design tools, have a look at: <a href="../PartDesign_Examples.html" title="PartDesign Examples">PartDesign examples</a>.
+<p>N&#283;kolik n&aacute;pad&#367;, co lze pomoc&iacute; n&aacute;stroj&#367; Part Design dos&aacute;hnout, najdete na str&aacute;nce: <a href="../PartDesign_Examples.html" title="PartDesign Examples">P&#345;&iacute;klady PartDesign</a>.
 </p><p><span typeof="mw:File"><span><img src="../File/PartDesign_ExampleSphere-02.png" decoding="async" width="80" height="60" class="mw-file-element" data-file-width="800" data-file-height="600"></span></span>
 <span typeof="mw:File"><span><img src="../File/PartDesign_ExampleTorus-01.png" decoding="async" width="80" height="60" class="mw-file-element" data-file-width="800" data-file-height="600"></span></span>
 <span typeof="mw:File"><span><img src="../File/PartDesign_ExamplePad-09.png" decoding="async" width="80" height="60" class="mw-file-element" data-file-width="800" data-file-height="600"></span></span>
@@ -207,34 +207,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119220643
+Cached time: 20260119220715
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.238 seconds
-Real time usage: 0.855 seconds
+CPU time usage: 0.237 seconds
+Real time usage: 0.511 seconds
 Preprocessor visited node count: 474/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4425/5000000 bytes
+Unstrip post&#8208;expand size: 4429/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.542      1 -total
- 32.08%    7.232      1 Template:PartDesign_Tools_navi/cs
- 31.33%    7.063      1 Template:Userdocnavi/cs
- 19.27%    4.344      2 Template:Navigation_menu_2
- 11.94%    2.691      2 Template:Docnav
-  5.97%    1.345      1 Template:Version
-  5.85%    1.319      1 Template:TOCright
-  4.77%    1.076      5 Template:VersionPlus
-  4.17%    0.939      1 Template:MenuCommand
+100.00%   20.442      1 -total
+ 32.33%    6.609      1 Template:PartDesign_Tools_navi/cs
+ 31.22%    6.382      1 Template:Userdocnavi/cs
+ 24.40%    4.988      2 Template:Navigation_menu_2
+ 10.90%    2.229      2 Template:Docnav
+  5.56%    1.136      1 Template:TOCright
+  5.50%    1.125      5 Template:VersionPlus
+  5.09%    1.040      1 Template:Version
+  4.63%    0.947      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220642 and revision id 1741371. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220714 and revision id 1741373. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
